Fix issue with overflow being applied to buttons

--- a/packages/web-components/src/components/va-modal/va-modal.scss
+++ b/packages/web-components/src/components/va-modal/va-modal.scss
@@ -30,7 +30,7 @@
     width: 100%;
   }
 }
-.usa-modal__main *:not(va-button) {
+.usa-modal__main div[role=document] {
   overflow-wrap: anywhere; // Prevent text overflowing the modal when words are longer than the modal width
 }
 
